--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-globe": "^4.0.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.8",
     "three": "0.109.0"
