--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,11 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "react": "16.8.3",
+    "globe": "^0.3.1",
+    "react": "^16.8.3",
     "react-dom": "16.8.3",
     "react-globe": "^4.0.0",
+    "react-image-fallback": "^8.0.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.8",
