--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,9 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@mui-treasury/components": "^1.9.1",
     "globe": "^0.3.1",
+    "moment": "^2.27.0",
     "react": "^16.8.3",
     "react-dom": "16.8.3",
     "react-globe": "^4.0.0",
